--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -2909,6 +2909,8 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
+        <DCCReference Include="Src\Geometry\u_DoublePointsMetaAggregator.pas"/>
+        <DCCReference Include="Src\Geometry\u_DoublePointsMeta.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
