--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -1501,6 +1501,7 @@
         <DCCReference Include="Src\Geometry\u_DoublePointsAggregator.pas"/>
         <DCCReference Include="Src\Geometry\u_DoublePointsMeta.pas"/>
         <DCCReference Include="Src\Geometry\u_DoublePointsMetaAggregator.pas"/>
+        <DCCReference Include="Src\Geometry\u_EnumDoublePointAbstract.pas"/>
         <DCCReference Include="Src\Geometry\u_EnumDoublePointByLineSet.pas"/>
         <DCCReference Include="Src\Geometry\u_EnumDoublePointBySingleLine.pas"/>
         <DCCReference Include="Src\Geometry\u_EnumDoublePointClipInternal.pas"/>
@@ -2910,7 +2911,8 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
-        <DCCReference Include="Src\Geometry\u_EnumDoublePointAbstract.pas"/>
+        <DCCReference Include="Src\Geometry\u_GeometryMetaToStreamJson.pas"/>
+        <DCCReference Include="Src\Geometry\i_DoublePointsMeta.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
